--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "aws-amplify": "^5.1.3",
     "aws-sdk": "^2.1366.0",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
